frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-frontend
  template:
    metadata:
      labels:
        app: event-frontend
    spec:
      containers:
      - name: event-frontend-container
        image: eventregistryhiran01.azurecr.io/eventnet_frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
